# tirta_aigenerator

./: .gitignore  main.py  pyproject.toml
clients/: common.py  deepseek.py  gemini.py  zai_glm.py
outputs/: deepseek_20260510_033557_reasoning.json  deepseek_20260510_235620.md  deepseek_20260510_235620_reasoning.md  deepseek_20260511_190759.md  deepseek_20260512_011829_reasoning.json  deepseek_20260512_011829_reasoning.md  deepseek_20260512_040604.md  deepseek_20260512_081546.md  deepseek_20260512_081546_reasoning.md  deepseek_20260512_111145_reasoning.md  deepseek_20260512_112515_reasoning.md  deepseek_20260512_144640.md  deepseek_20260512_144640_reasoning.json  deepseek_20260512_144640_reasoning.md  deepseek_20260512_173754.md  deepseek_20260512_173754_reasoning.md  deepseek_20260512_180245_reasoning.md  deepseek_20260512_201733.md  deepseek_20260512_201733_reasoning.json  deepseek_20260512_220039.md  deepseek_20260512_220039_reasoning.json  deepseek_20260513_020853.md  deepseek_20260513_020853_reasoning.json  deepseek_20260513_020853_reasoning.md  deepseek_20260513_092737.md  deepseek_20260514_000707.md  deepseek_20260514_034931_reasoning.json  deepseek_20260514_034931_reasoning.md  deepseek_20260514_222405.md  deepseek_20260514_222405_reasoning.json  deepseek_20260515_005335.md  deepseek_20260515_005335_reasoning.json  deepseek_20260515_005335_reasoning.md  deepseek_20260515_041545_reasoning.json  deepseek_20260515_041545_reasoning.md  deepseek_20260515_132431_reasoning.json  deepseek_20260515_153343.md  deepseek_20260515_153343_reasoning.json  (+274 more)
prompts/: prompt10.md  (+40 more)
(+341 files in other folders)
